<resources>
    <string name="app_name">Café Alicia</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">El usuario no es válido</string>
    <string name="error_incorrect_user">El usuario no esta registrado</string>
    <string name="error_connection_timeout">No hay conexión al servidor</string>
    <string name="error_connection_error">No se puede autenticar usuario</string>
    <string name="error_invalid_password">La contraseña no es válida</string>
    <string name="error_incorrect_password">La contraseña no es correcta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Café Alicia</string>

    <string name="action_settings">Preferencias</string>
    <string name="uri_services_check_login">/CafeAlicia/Services/service.php?email=</string>
    <string name="button_ventas">Ventas</string>
    <string name="button_creditos">Créditos</string>
    <string name="button_facturas">Facturas</string>
    <string name="button_productos">Productos</string>
    <string name="button_proveedores">Proveedores</string>
    <string name="setting_config_ip_key">IP</string>
    <string name="setting_config_ip_title">IP SERVER</string>
    <string name="setting_config_ip_summary">Introduzca dirección IP del servidor</string>
    <string name="menu_action_logout">Cerrar sesión</string>
    <string name="title_activity_ventas">Inicio</string>
    <string name="title_informe_ventas">Informe de ventas</string>
    <string name="dialog_informe_ok">Informe enviado correctamente</string>
    <string name="dialog_informe_error">No se pudo enviar el informe</string>
    <string name="title_activity_dialog">Seleccione</string>

    <string name="title_dialog_ventas">Que desea hacer ?</string>
    <string name="button_dilog_ventas_crear">Crear informe de venta</string>
    <string name="button_dilog_ventas_ver">Ver informes de venta</string>
    <string name="title_VentasActivityList">Informes de ventas</string>
    <string name="connection_key">petv8cp9</string>


</resources>
