<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_dialog_ventas"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_dilog_ventas_crear"
        android:id="@+id/btnCrear"
        android:onClick="crear"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_dilog_ventas_ver"
        android:id="@+id/button2"
        android:onClick="ver"
        android:layout_below="@+id/btnCrear"
        android:layout_alignRight="@+id/btnCrear"
        android:layout_alignEnd="@+id/btnCrear"
        android:layout_alignLeft="@+id/btnCrear"
        android:layout_alignStart="@+id/btnCrear" />
</RelativeLayout>